# frame-validity-od

./: .gitignore  .python-version  README.md  nohup.out  pyproject.toml  test_internimage_inf.py
data/: data.csv  data2.csv  data_yolo.csv  llm_metafeatures.csv  llm_metafeatures_description.json  llm_metafeatures_gemini.csv  metafeatures.csv  metafeatures2.csv  yolo_llm-metafeatures.csv  yolo_llm-metafeatures_disc.csv  yolo_metadetect.csv
data/zod_coco/: zod_mini_Anonymization.BLUR_train.json  zod_mini_Anonymization.BLUR_val.json
data/zod_mini/: trainval-frames-mini.json
data/zod_yolo/: dataset.yaml
models/internimage_classification/training__dataset21_01_2025/: config.yaml
models/internimage_detection/dcnv3/: dino_4scale_internimage_l_3x_zenseact_0.1x_backbone_lr.py
models/internimage_detection/dcnv4/: dino_4scale_flash_internimage_b_1x_zenseact.py
notebooks/: .cache.sqlite  assess_pred_analysis.ipynb  assessors.ipynb  assessors_abalation.ipynb  assessors_classification.ipynb  assessors_metadetect.ipynb  eda.ipynb  metadetect_models.ipynb  results.csv  zod_to_tabular.ipynb  zod_train_valid_split.ipynb
results/assessors/: faster-rcnn_ass_results_table.csv  iou_test_ass_data_yolo_500e.csv  iou_test_ass_faster-rcnn_metafeatures.csv  iou_test_ass_yolo_metafeatures.csv  lrp_test_ass_data_yolo_500e.csv  lrp_test_ass_faster-rcnn_metafeatures.csv  lrp_test_ass_yolo_metafeatures.csv  test_ass_results_table.csv  vlm_iou_pred.json  yolo_ass_results_table.csv
results/faster-rcnn/: detections.json  raw_predictions.meta.json
results/validators/: faster-rcnn_ass_results_table.csv  yolo_ass_results_table.csv
results/yolo/: detections.json  raw_predictions.meta.json
src/data/: build_metadetect_dataset.py  build_val_embeddings.py  combine_data_predictions.py  fill_from_other_csv.py  llm_feature_extraction.py  metadetect_features.py  upload_metafeatures_to_hf.py  zod_to_tabular.py
src/models/: metrics.py  run_inference.py
src/models/detectron2/: inference.py  train.py  train_eval.sh
src/models/faster-rcnn/: inference.py  train.py
src/models/internimage/: config_me.py  functions_cls.py  inference.py  inference_image.py  inference_video.py
src/models/rf-detr/: inference.py  (+1 more)
src/utils/: coco_to_yolo.py  delete_lidar_zod.py  download_SFT_from_json.py  generate_coco_json.py  zod_to_coco.py
src/vlm-assessors/: smolvlm_fine-tune.py
(+10 files in other folders)
