[project]
name = "predictability-ad"
version = "0.1.0"
description = ""
authors = [
    {name = "Felix",email = "felix.marti99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "zod[cli] (>=0.7,<0.8)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "ultralytics (>=8.3.150,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
