[project]
name = "predictability-ad"
version = "0.1.0"
description = ""
authors = [
    {name = "Felix",email = "felix.marti99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "zod[cli] (>=0.7,<0.8)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "numpy (==1.26.4)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "ultralytics (>=8.3.150,<9.0.0)",
    "openmeteo-requests (>=1.5.0,<2.0.0)",
    "requests-cache (>=1.2.1,<2.0.0)",
    "retry-requests (>=2.0.0,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "tensorboard (>=2.19.0,<3.0.0)",
    "openmim (>=0.3.9,<0.4.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "libsvm (>=3.23.0.4,<4.0.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "torchmetrics[image] (>=1.7.3,<2.0.0)",
    "piq (>=0.8.0,<0.9.0)",
    "transformers (>=4.53.0,<5.0.0)",
    "pycocotools (>=2.0.10,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "xgboost (==2.1.4)",
    "hf-transfer (>=0.1.9,<0.2.0)",
    "autogluon (>=1.4.0,<2.0.0)",
    "openai (>=2.14.0,<3.0.0)",
    "rfdetr @ git+https://github.com/femartip/rf-detr.git",
]

[tool.poetry]
packages = [
  { include = "brisque", from = "src/utils/" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
